--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Vanyi0924's website</title>
 </head>
 
 <body>
-  <h1>hello</h1>
+  <p>Vanyi0924's website</p>
 </body>
 
 </html>
