--- a/kline/index.html
+++ b/kline/index.html
@@ -14,6 +14,14 @@
       height: 500px;
     }
 
+    p {
+      margin: 0 auto;
+      width: 1000px;
+      font-size: 12px;
+      color: #888;
+      text-align: right;
+    }
+
     fieldset {
       margin: 0 auto;
       margin-top: 40px;
@@ -25,10 +33,11 @@
 <body>
   <fieldset>
     <legend>Operation Area</legend>
-    <button onclick="switchTheme()">切换主题</button>
-    <button onclick="switchChartType()">切换图表类型</button>
+    <button onclick="switchTheme()">switchTheme</button>
+    <button onclick="switchChartType()">switchChartType</button>
   </fieldset>
   <div id="chart_container"></div>
+  <p>Thanks to <a href="https://www.huobi.br.com/zh-cn/">Huobi</a> for providing data support(btc-usdt).</p>
 </body>
 <script src="./js/kline.min.js"></script>
 <script src="./js/pako.min.js"></script>
